--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Charoenmun-Labours
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zv9k1DyojUnr//PwBNh/wzgzHGF18rrPMkMoUplpfBA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=147.50.230.21
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=charoen_labours
+DB_USERNAME=charoen_labours
+DB_PASSWORD=n2smsq2&5TwRUdy!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
